Make sure buttons at bottom of assessment items aren't cut off.

--- a/app/assets/stylesheets/jcarousel.scss
+++ b/app/assets/stylesheets/jcarousel.scss
@@ -13,13 +13,13 @@
     float: left;
     overflow-x: hidden;
     overflow-y: auto;
-    
   }
   .buttons {
+    background: #fff;
+    border-top: 1px solid #ededed;
+    bottom: 0;
     position: absolute;
     width: 100%;
-    bottom: 0;
-    border-top: 1px solid #ededed;
     input[type="submit"] {
       margin-top: 8px;
     }
